[package]
name = "d2wm_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "d2wm_parser"

[dependencies]
d2-stampede = "0.2"
d2-stampede-observers = "0.2"
hashbrown = "0.14"
anyhow = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
